--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -11,7 +11,7 @@
         <ul>
             <div id="navMidt">
                 <li>
-                    <a href="askMenigshetshus.html">Hjem</a>
+                    <a href="index.html">Hjem</a>
                 </li>
                 <li>
                     <a href="historikk.html">Historikk</a>
