--- a/historikk.html
+++ b/historikk.html
@@ -11,7 +11,7 @@
         <ul>
             <div id="navMidt">
                 <li>
-                    <a href="askMenigshetshus.html">Hjem</a>
+                    <a href="index.html">Hjem</a>
                 </li>
                 <li>
                     <a href="historikk.html">Historikk</a>
@@ -49,7 +49,7 @@
             </div>
             <div id=kontaktBoks>
                 <p>
-                    Øyvind Fluge <br>98817422 <br>Ask menighetshus <br> Askvegen 374 <br> 5307 Ask
+                    Øyvind Fluge <br>98817422 <br>Ask menighetshus <br> Askvegen 374 <br> 5307 Ask <br>
                 </p>
             </div>
         </div>
