--- a/bilderMenighet.html
+++ b/bilderMenighet.html
@@ -12,7 +12,7 @@
         <ul>
             <div id="navMidt">
                 <li>
-                    <a href="askMenigshetshus.html">Hjem</a>
+                    <a href="index.html">Hjem</a>
                 </li>
                 <li>
                     <a href="historikk.html">Historikk</a>
