--- a/utleieregler.html
+++ b/utleieregler.html
@@ -41,6 +41,68 @@
             </ul>
         </div>
         <div class=infoBoks>
+            <p>
+                <b>Ordensregler</b><br>
+            </p>
+            <ul>
+                <li>
+                    Ask menighetshus er ikke i offentlig eie. Styret for huset må selv drifte og
+                    vedlikeholde eiendommen. Det er derfor viktig at alle brukerne behandler
+                    hus og innbo som om ”det var ens eget”. Meld fra om noe er blitt skadet
+                    mens du/dere leide huset.
+                </li>
+                <li>
+                    Temperaturen blir regulert av huseier. Ved utleie settes temperaturen
+                    til 20 grader. Etter bruk settes temperaturen ned til 18 grader.
+                    Bruk kun mobil.app. for å regulere varmepumpen, ikke fjernkontrollen.
+                </li>
+                <li>
+                    Nødvendig snørydding fra parkeringsplass og ned til inngang utføres av brukerne.
+                </li>
+                <li>
+                    Det er ikke tillatt å røyke eller å servere alkohol i huset.
+                </li>
+            </ul>
+            <ol>
+                <li>
+                    Leietaker skal orientere seg om rømningsveier og brannslukningsapparater
+                </li>
+                <li>
+                    Merk hvordan rommene er ”møblert” før du gjør endringer for ditt bruk. Oppslag på vegg i småsalen.
+                </li>
+                <li>
+                    Bordene skal ikke skyves på golvet, men bæres på plass
+                </li>
+                <li>
+                    Stolene skal ikke skyves på golvet, men bæres på plass.
+                </li>
+                <li>
+                    Ved bruk av oppvaskmaskin, skal bruksanvisning følges nøye. Henger på vegg i kjøkken.
+                </li>
+                <li>
+                    Etter bruk skal alt settes på sin plass, se punktene 2, 3 og 4.
+                </li>
+                <li>
+                    Golvene skal støvsuges hvis nødvendig. Det skal alltid moppes i alle rom etter bruk. Dørmattene ristes grundig. Støvsuger og mopper i skap på kjøkkenet. Huset tar ansvar for å få moppene vasket
+                </li>
+                <li>
+                    Hvis en bruker duker som tilhører huset, koster dette kr 75,- pr. duk. (Gjelder fra 18.8.16)
+                </li>
+                <li>
+                    Kjøkkenhåndklær, kluter og duker sørger huset for å bli vasket. Legg dette ved vasken.
+                </li>
+                <li>
+                    Før en låser av, se etter at alle ytterdører og vinduer er lukket og låst. Alle innvendig dører i første etasje skal stå åpne, bortsett fra dør til kjøkken og dør til stollager. Lysene slukkes.
+                </li>
+                <li>
+                    I månedene september - april, skal utelyset ved hoveddør alltid være slått på.
+                </li>
+                <li>
+                    Betaling for leie av huset settes inn på: Ask menighetshus, konto 6515 11 33139, eller betales ved innlevering av nøklene. Pris: Kr 500,- . Eventuell vask: Kr 500,-
+                </li>
+            </ol>
+        </div>
+        <div class=infoBoks>
             <p><b>Styret Ask Menighetshus</b></p>
             <ul>
                 <li>Leder og sekretær: Øyvind Fluge</li>
